feat: add user role to UserBasicInfo and WorkflowPermissionInfo schemas
